--- a/manager/asset/template/login.html
+++ b/manager/asset/template/login.html
@@ -7,9 +7,11 @@
 	</head>
 	</body>
 
+
 	<div>
 
 	    <h2>Login</h2>
+	    <font color="red">{{.Message}}</font><br>
 	    <form method="POST" action="./login">
 		Username
 		<input name="username" type="text" placeholder="Username" required> 
@@ -19,6 +21,7 @@
 		<button type="submit">Login</button>
 	    </form>
         </div>
+
 
 	<body>
 </html>
