--- a/manager/asset/template/mngmnt/index.html
+++ b/manager/asset/template/mngmnt/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-		<link rel="import" href="/bower_components/polymer/polymer.html">
+		<script src="../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+		<link rel="import" href="../bower_components/polymer/polymer.html">
 	</head>
 	</body>
 
