--- a/manager/asset/template/mngmnt/index.html
+++ b/manager/asset/template/mngmnt/index.html
@@ -14,6 +14,7 @@
 		<link rel="import" href="../bower_components/mat-elements/mat-list.html">
 		<link rel="import" href="../bower_components/mat-elements/mat-sublist.html">
 		<link rel="import" href="../bower_components/sliding-pages/sliding-pages.html">
+		<link rel="import" href="../bower_components/pdns-record-updater/edit-target.html">
 
 		<custom-style>
 			<style include="iron-flex iron-flex-alignment">
@@ -98,7 +99,7 @@
 				<div class="content layout flex">
 					<sliding-pages class="main-view" id="main-views" active-index="0">
 						<div><div class="view"></div></div>
-						<div><div class="view">edit target</div></div>
+						<div><edit-target class="view"></edit-target></div>
 						<div><div class="view">edit zone</div></div>
 						<div><div class="view">edit name server</div></div>
 						<div><div class="view">edit static record</div></div>
