--- a/manager/asset/template/mngmnt/s/edit-target.html
+++ b/manager/asset/template/mngmnt/s/edit-target.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../iron-ajax/iron-ajax.html">
-<link rel="import" href="../mat-elements/mat-button.html">
-<link rel="import" href="../paper-datatable-api/paper-datatable-api-column.html">
-<link rel="import" href="../paper-datatable-api/paper-datatable-api.html">
+<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../../bower_components/mat-elements/mat-button.html">
+<link rel="import" href="../../bower_components/paper-datatable-api/paper-datatable-api-column.html">
+<link rel="import" href="../../bower_components/paper-datatable-api/paper-datatable-api.html">
 
 
 <dom-module id="edit-target">
@@ -28,7 +28,7 @@
 		<iron-ajax 
 		    auto
 	  	    with-credentials
-		    url="../bower_components/pdns-record-updater/test.js"
+		    url="./a/config"
 		    method="GET"
 		    handle-as="json"
 		    on-response="_response"
