--- a/manager/asset/template/mngmnt/index.html
+++ b/manager/asset/template/mngmnt/index.html
@@ -14,7 +14,7 @@
 		<link rel="import" href="../bower_components/mat-elements/mat-list.html">
 		<link rel="import" href="../bower_components/mat-elements/mat-sublist.html">
 		<link rel="import" href="../bower_components/sliding-pages/sliding-pages.html">
-		<link rel="import" href="../bower_components/pdns-record-updater/edit-target.html">
+		<link rel="import" href="./s/edit-target.html">
 
 		<custom-style>
 			<style include="iron-flex iron-flex-alignment">
