--- a/manager/asset/template/mngmnt/index.html
+++ b/manager/asset/template/mngmnt/index.html
@@ -25,7 +25,7 @@
 					padding: 0;
 					box-sizing: border-box;
 					color: dimgray;
-					background-color: snow;
+					background-color: white;
 				}
 				body {
 					display: flex;
@@ -53,7 +53,7 @@
 					border-left: thin solid lightgrey;
 				}
 				sliding-pages div {
-					--page-background-color: snow;
+					--page-background-color: white;
 			        }
 			</style>
 		</custom-style>
