--- a/manager/asset/template/mngmnt/components/edit-target.html
+++ b/manager/asset/template/mngmnt/components/edit-target.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../../bower_components/mat-elements/mat-dropdown.html">
 <link rel="import" href="../../bower_components/mat-elements/mat-checkbox.html">
 <link rel="import" href="../../bower_components/mat-elements/mat-text-area.html">
+<link rel="import" href="../../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
 <link rel="import" href="../../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../../bower_components/paper-datatable-api/paper-datatable-api-icons.html">
 <link rel="import" href="../../bower_components/paper-datatable-api/paper-datatable-api-th-content.html">
@@ -16,20 +17,26 @@
 
 <dom-module id="edit-target">
 	<template>
-		<style is="custom-style">
-			mat-button {
-				border: 1px;
-				border-style: groove;
-				margin: 4px;
-				background-color: whitesmoke;
-			}
-			paper-datatable-api {
-                                --paper-datatable-api-horizontal-padding: 8px;
-				--paper-datatable-api-tr-selected-background: lightgrey;
-				--paper-datatable-api-tr-odd-background-color: ghostwhite;
-				--paper-datatable-api-tr-even-background-color: snow;
-			}
-		</style>
+		<custom-style>
+			<style>
+				mat-button {
+					border: 1px;
+					border-style: groove;
+					margin: 4px;
+					background-color: whitesmoke;
+				}
+				paper-datatable-api {
+					--paper-datatable-api-horizontal-padding: 8px;
+					--paper-datatable-api-tr-selected-background: lightgrey;
+					--paper-datatable-api-tr-odd-background-color: ghostwhite;
+					--paper-datatable-api-tr-even-background-color: snow;
+				}
+				paper-dialog {
+					width: 300px;
+					--layout-end-justified_-_justify-content: flex-start; 
+				}
+			</style>
+		</custom-style>
 		<div>
 			<mat-button id="new-target-button" data='{"type":"new"}' label="new target"></mat-button>
 		</div>
@@ -90,6 +97,11 @@
 						<span>{{value}}</span>
 					</template>
 				</paper-datatable-api-column>
+				<paper-datatable-api-column header="Ssl Skip Verify" property="tlsSkipVerify">
+					<template>
+						<span>{{value}}</span>
+					</template>
+				</paper-datatable-api-column>
 				<paper-datatable-api-column header="Watch Interval" property="watchInterval">
 					<template>
 						<span>{{value}}</span>
@@ -108,13 +120,13 @@
 			</paper-datatable-api>
 		</div>
 
-		<paper-dialog id="edit-target-modal" label="edit target">
-			<div>
+		<paper-dialog id="edit-target-dialog" label="edit target" aper-dialog-scrollable >
+			<paper-dialog-scrollable>
 				<div>
-					<mat-text-field label="Target name" readonly float-disabled inline></mat-text-field>	      
-				</div>
+					<mat-text-field id="edit-input-target-name" label="Target name" float-disabled inline></mat-text-field>	      
+					</div>
 				<div>
-					<mat-dropdown label="Protocol" float-disabled inline>
+					<mat-dropdown id="edit-input-protocol" label="Protocol" float-disabled inline>
 						<mat-option value="icmp" label="icmp"></mat-option>
 						<mat-option value="tcp" label="tcp"></mat-option>
 						<mat-option value="tcpRegexp" label="tcpRegexp"></mat-option>
@@ -123,44 +135,46 @@
 					</mat-dropdown>
 				</div>
 				<div>
-					<mat-text-field label="Destination" float-disabled inline></mat-text-field>	      
+					<mat-text-field id="edit-input-destination" label="Destination" float-disabled inline></mat-text-field>	      
 				</div>
 				<div>
-					<mat-checkbox label="Use TLS by TCP"></mat-checkbox>
+					<mat-checkbox id="edit-input-use-tcp-tls" label="Use TLS by TCP"></mat-checkbox>
 				</div>
 				<div>
-					<mat-dropdown label="HTTP method" float-disabled inline>
+					<mat-dropdown id="edit-input-http-method" label="HTTP method" float-disabled inline>
 						<mat-option value="GET" label="GET"></mat-option>
 						<mat-option value="HEAD" label="HEAD"></mat-option>
 					</mat-dropdown>
 				</div>
 				<div>
-					<mat-text-area label="HTTP status list" float-disabled inline></mat-text-area>
+					<mat-text-area id="edit-input-http-status-list" label="HTTP status list" float-disabled inline></mat-text-area>
 				</div>
 				<div>
-					<mat-text-field label="Regexp" float-disabled inline></mat-text-field>	      
+					<mat-text-field id="edit-input-regex" label="Regexp" float-disabled inline></mat-text-field>	      
 				</div>
 				<div>
-					<mat-text-field label="Response Size" number  float-disabled inline></mat-text-field>	      
+					<mat-text-field id="edit-input-response-size" label="Response Size" number  float-disabled inline></mat-text-field>	      
 				</div>
 				<div>
-					<mat-text-field label="Retry" number float-disabled inline></mat-text-field>	      
+					<mat-text-field id="edit-input-retry" label="Retry" number float-disabled inline></mat-text-field>	      
 				</div>
 				<div>
-					<mat-text-field label="Retry wait"  number float-disabled inline></mat-text-field>	      
+					<mat-text-field id="edit-input-retry-wait" label="Retry wait"  number float-disabled inline></mat-text-field>	      
 				</div>
 				<div>
-					<mat-text-field label="timeout" number float-disabled inline></mat-text-field>	      
+					<mat-text-field id="edit-input-timeout" label="timeout" number float-disabled inline></mat-text-field>	      
 				</div>
 				<div>
-					<mat-checkbox label="TLS skip verify"></mat-checkbox>
+					<mat-checkbox id="edit-input-tls-skip-verify" label="TLS skip verify"></mat-checkbox>
 				</div>
 				<div>
-					<mat-text-field label="Watch interval"  number float-disabled inline></mat-text-field>	      
+					<mat-text-field id="edit-input-watch-interval" label="Watch interval"  number float-disabled inline></mat-text-field>	      
 				</div>
+			</paper-dialog-scrollable>
+			<div class="buttons layout start">
+				<mat-button id="edit-target-dialog-ok" data='{"type":"edit-ok"}' slot="actions" action="toggle" label="ok" target="edit-target-dialog"></mat-button>
+				<mat-button id="edit-target-dialog-cancel" data='{"type":"edit-cancel"}' slot="actions" action="toggle" label="cancel" target="edit-target-dialog"></mat-button>
 			</div>
-			<mat-button id="edit-target-dialog-ok" data='{"type":"edit-ok"}' slot="actions" action="toggle" label="ok" target="edit-target-modal"></mat-button>
-			<mat-button id="edit-target-dialog-cancel" slot="actions" action="toggle" label="cancel" target="edit-target-modal"></mat-button>
 		</paper-dialog>
 
 		<iron-ajax id="get-config-ajax"
@@ -193,30 +207,83 @@
 				console.log(data);
 				if (data.type == "new") {
 					console.log("new");
-					//this.shadowRoot.querySelector("#edit-target-modal").setProperties({"active" : true});
-					this.shadowRoot.querySelector("#edit-target-modal").open();
+					this._set_edit_field({
+						"#edit-input-target-name" : "",
+						"#edit-input-protocol" : "",
+						"#edit-input-destination" : "",
+						"#edit-input-use-tcp-tls" : false,
+						"#edit-input-http-method" : "",
+						"#edit-input-http-status-list" : "",
+						"#edit-input-regex" : "",
+						"#edit-input-response-size" : "",
+						"#edit-input-retry" : "",
+						"#edit-input-retry-wait" : "",
+						"#edit-input-timeout" : "",
+						"#edit-input-tls-skip-verify" : false,
+						"#edit-input-watch-interval" : ""
+					})
+					this.shadowRoot.querySelector("#edit-input-target-name").setProperties({"readonly" : false});
+					this.shadowRoot.querySelector("#edit-target-dialog").open();
 				} else if (data.type == "edit") {
 					console.log("edit");
-					//this.shadowRoot.querySelector("#edit-target-modal").setProperties({"active" : true});
-					this.shadowRoot.querySelector("#edit-target-modal").open();
+					this._set_edit_field({
+						"#edit-input-target-name" : data.name,
+						"#edit-input-protocol" : this.watcher_data.targetMap[data.name].protocol,
+						"#edit-input-destination" : this.watcher_data.targetMap[data.name].dest,
+						"#edit-input-use-tcp-tls" : this.watcher_data.targetMap[data.name].tcpTls,
+						"#edit-input-http-method" : this.watcher_data.targetMap[data.name].httpMethod,
+						"#edit-input-http-status-list" : this.watcher_data.targetMap[data.name].httpStatusList,
+						"#edit-input-regex" : this.watcher_data.targetMap[data.name].regexp,
+						"#edit-input-response-size" : this.watcher_data.targetMap[data.name].resSize,
+						"#edit-input-retry" : this.watcher_data.targetMap[data.name].retry,
+						"#edit-input-retry-wait" : this.watcher_data.targetMap[data.name].retryWait,
+						"#edit-input-timeout" : this.watcher_data.targetMap[data.name].timeout,
+						"#edit-input-tls-skip-verify" : this.watcher_data.targetMap[data.name].tlsSkipVerify,
+						"#edit-input-watch-interval" : this.watcher_data.targetMap[data.name].watchInterval
+					})
+					this.shadowRoot.querySelector("#edit-input-target-name").setProperties({"readonly" : true});
+					this.shadowRoot.querySelector("#edit-target-dialog").open();
 				} else if (data.type == "edit-ok") {
 					console.log("edit-ok");
+					//var data = this._gather_edit_field()
+					//this._update_target(data)
+				} else if (data.type == "edit-cancel") {
+					console.log("edit-cancel");
 				} else if (data.type == "remove") {
 					console.log("remove");
 				}	
 			}
+			_set_edit_field (d) {
+				for (var key in d) {
+					console.log(key, d[key])
+					if (key == "#edit-input-use-tcp-tls" || key == "#edit-input-tls-skip-verify") {
+						this.shadowRoot.querySelector(key).setProperties({"checked" : d[key]});
+					} else if (key == "#edit-input-http-status-list") {
+						if (d[key] != undefined && d[key] != null) {
+							this.shadowRoot.querySelector(key).setProperties({"value" : d[key].join("\n")});
+						}
+					} else {
+						this.shadowRoot.querySelector(key).setProperties({"value" : d[key]});
+					}
+				}
+			}
 			_response(e) {
 				console.log("response");
 				var newData = [];
-				for (var key in e.detail.xhr.response.watcher.targetMap) {
+				this.watcher_data = e.detail.xhr.response.watcher
+				for (var key in this.watcher_data.targetMap) {
 					var target = e.detail.xhr.response.watcher.targetMap[key];
+					var statusLists = ""
+					if (target.httpStatusList != undefined && target.httpStatusList != null) {
+						statusLists = target.httpStatusList.join("\n");
+					}
 					newData.push({
 						name: key,
 						protocol: target.protocol,
 						dest: target.dest,
 						tcpTls: target.tcpTls,
 						httpMethod: target.httpMethod,
-						httpStatusList: target.httpStatusList,
+						httpStatusList: statusLists,
 						regexp: target.regexp,
 						resSize: target.resSize,
 						retry: target.retry,
